adicionada função para validar o email

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <div class="validateField">
         <input type="email" id="email" name="email" placeholder="Email Addres" required>
-        <button type="button">></button>
+        <button type="submit" onclick="validaEmail()">></button>
       </div>
 
     </div>
@@ -43,7 +43,7 @@
       <img src="images/IMG_0350.jpg" alt="">
     </div>
   </main>
-
+  <script src="script.js"></script>
 </div>
 
 </body>
